# AgenteOSBrain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  install.sh  package-lock.json  package.json  railway.json
.github/workflows/: deploy-web.yml  release-desktop.yml
backend/: package.json  tsconfig.json
backend/src/: config.ts  index.ts  seed-demo.ts  seed-editorial.ts  seed-form-filler.ts  seed-skills.ts
backend/src/database/: connection.ts  migrate.ts
backend/src/middleware/: error-handler.ts
backend/src/orchestrator/: engine.ts
desktop/: BUILD.md  package.json
desktop-electron/: build.js  main.js  package-lock.json  package.json  seed-defaults.js
desktop/scripts/: build-all.js  dev-backend.js  download-node.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: agents.api.ts  ai.api.ts  chat.api.ts  client.ts  connectors.api.ts  execute.api.ts  graph.api.ts  memory.api.ts  outputs.api.ts  projects.api.ts  prompts.api.ts  providers.api.ts  scheduler.api.ts  skills.api.ts  tools.api.ts  workspace.api.ts
frontend/src/i18n/: it.ts
frontend/src/stores/: useChatStore.ts  useGraphStore.ts  useProjectStore.ts  useUIStore.ts
launcher/: agent-os.pids  install-desktop.sh  start.sh  stop.sh
shared/: package.json
shared/src/: constants.ts  types.ts
site/: index.html
(+121 files in other folders)
