[package]
name = "agenteos-brain"
version = "0.2.0"
description = "Agent OS Brain — Desktop App"
authors = ["Brian"]
edition = "2021"

[lib]
name = "agenteos_brain_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
